# backend

./: .gitignore
azure/Registrar/: Registrar.sln
azure/Registrar/Registrar/: Registrar.ccproj  ServiceConfiguration.Cloud.cscfg  ServiceConfiguration.Local.cscfg  ServiceDefinition.csdef
azure/Registrar/WebRole1/: Global.asax.cs  WebRole1.csproj
azure/Registrar/WebRole1/App_Start/: RouteConfig.cs  WebApiConfig.cs
azure/Registrar/WebRole1/Controllers/: RegistrarController.cs
azure/Registrar/WebRole1/DTO/: UserRegistration.cs
azure/Registrar/WebRole1/Properties/: AssemblyInfo.cs
linux/chat_server/: CMakeLists.txt  Doxyfile  chat_server.conf  clean_cmake.sh  convert.sh
linux/chat_server/common/: compiled_definitions.h.in  exception_dispatcher.h  exception_impl.h  result_code.h  signal_translator.h
linux/chat_server/config/: CMakeLists.txt  configuration_manager.cc  configuration_manager.h
linux/chat_server/core/: CMakeLists.txt  main.cc  server_engine.cc  server_engine.h
linux/chat_server/core/data_processing/: message_description.h  process_message_task.cc  process_message_task.h  receive_data_task.cc  receive_data_task.h  task.h  write_answer_task.cc  write_answer_task.h
linux/chat_server/network/: CMakeLists.txt  descriptor.h  interface_addresses_holder.cc  interface_addresses_holder.h  network_manager.cc  network_manager.h
linux/chat_server/network/connection/: connection_holder.cc  connection_holder.h  connection_manager.cc  connection_manager.h
linux/chat_server/network/socket/: socket_address_holder.cc  socket_address_holder.h  socket_wrapper.cc  socket_wrapper.h
linux/chat_server/signal/: CMakeLists.txt  signal_manager.cc  signal_manager.h
linux/chat_server/test_scripts/: ddos.sh  ddos_join.sh  ddos_light.sh  message_file.txt  test_commands.sh
linux/chat_server/tools/logger/: CMakeLists.txt  logger.h  logger_impl.cc  logger_impl.h
linux/chat_server/tools/thread_pool/: CMakeLists.txt  thread_pool.cc  thread_pool.h
linux/chat_server_legacy/: .cproject  .project  CMakeCache.txt  CMakeLists.txt  Makefile  cmake_install.cmake  convert.sh
linux/chat_server_legacy/common/: CompiledDefinitions.h  CompiledDefinitions.h.in  ConfigurationModule.h  IPCModule.h  LogHelper.h  Logger.h
linux/chat_server_legacy/config/: ConfigurationModule.cpp  Makefile  cmake_install.cmake
linux/chat_server_legacy/ipc/: CMakeLists.txt  IPCModule.cpp  Makefile  ThreadPoolModule.cpp  ThreadPoolModule.h  cmake_install.cmake
linux/chat_server_legacy/logger/: CMakeLists.txt  Logger.cpp  Makefile  cmake_install.cmake
linux/chat_server_legacy/server/: Makefile  chat-server.conf  cmake_install.cmake  main.cpp
linux/user_register_server/: CMakeLists.txt  clean_cmake.sh
linux/user_register_server/common/: CompiledDefinitions.h  CompiledDefinitions.h.in  ConfigurationModule.h  ExceptionHandler.h  IPCModule.h  LogHelper.h  Logger.h  ReturnCodes.h
linux/user_register_server/config/: CMakeLists.txt  ConfigurationModule.cpp
linux/user_register_server/ipc/: CMakeLists.txt  IPCModule.cpp  ProcessData.cpp  ProcessData.h  ThreadPoolModule.cpp  ThreadPoolModule.h
linux/user_register_server/logger/: Logger.cpp
linux/user_register_server/server/: CMakeLists.txt  data.txt  main.cpp  user-reg-server.conf
linux/user_register_server_#2/: Makefile  client.cpp  config.cpp  config.h  connection.cpp  connection.h  data.txt  datafile.cpp  datafile.h  logger.cpp  logger.h  main.cpp  manager.cpp  manager.h  queue.cpp  queue.h  request.cpp  request.h  server.cpp  server.h  skypetest.conf
linux/user_register_server_#2/inputs/: sample.conf  test-task.txt
